过滤和布局

--- a/src/1/mainwindow.ui
+++ b/src/1/mainwindow.ui
@@ -17,10 +17,10 @@
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>21</x>
-      <y>11</y>
-      <width>761</width>
-      <height>656</height>
+      <x>22</x>
+      <y>12</y>
+      <width>771</width>
+      <height>460</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -77,10 +77,14 @@
       <widget class="QTableView" name="packetTableView"/>
      </item>
      <item>
-      <widget class="QPlainTextEdit" name="packetDataview"/>
-     </item>
-     <item>
-      <widget class="QTreeView" name="packetDetails"/>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QTreeView" name="packetDetails"/>
+       </item>
+       <item>
+        <widget class="QPlainTextEdit" name="packetDataview"/>
+       </item>
+      </layout>
      </item>
     </layout>
    </widget>
