--- a/src/1/mainwindow.ui
+++ b/src/1/mainwindow.ui
@@ -53,7 +53,7 @@
      <string>defrag</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>24</x>
@@ -90,7 +90,7 @@
         </widget>
        </item>
        <item row="0" column="4">
-        <widget class="QPushButton" name="btn_stop_2">
+        <widget class="QPushButton" name="btn_clear">
          <property name="text">
           <string>clear</string>
          </property>
