--- a/src/1/mainwindow.ui
+++ b/src/1/mainwindow.ui
@@ -17,7 +17,7 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>700</x>
       <y>130</y>
       <width>81</width>
       <height>25</height>
@@ -30,8 +30,8 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>200</y>
+      <x>700</x>
+      <y>190</y>
       <width>81</width>
       <height>25</height>
      </rect>
@@ -43,7 +43,7 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>700</x>
       <y>70</y>
       <width>80</width>
       <height>25</height>
@@ -58,7 +58,7 @@
      <rect>
       <x>24</x>
       <y>12</y>
-      <width>522</width>
+      <width>661</width>
       <height>460</height>
      </rect>
     </property>
@@ -126,6 +126,19 @@
       </layout>
      </item>
     </layout>
+   </widget>
+   <widget class="QPushButton" name="btn_rtn">
+    <property name="geometry">
+     <rect>
+      <x>700</x>
+      <y>90</y>
+      <width>80</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>return</string>
+    </property>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
