--- a/src/1/mainwindow.ui
+++ b/src/1/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="btn_find">
     <property name="geometry">
      <rect>
       <x>700</x>
@@ -27,7 +27,7 @@
      <string>find</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="btn_save">
     <property name="geometry">
      <rect>
       <x>700</x>
@@ -40,7 +40,7 @@
      <string>save</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="btn_dfg">
     <property name="geometry">
      <rect>
       <x>700</x>
@@ -131,7 +131,7 @@
     <property name="geometry">
      <rect>
       <x>700</x>
-      <y>90</y>
+      <y>240</y>
       <width>80</width>
       <height>25</height>
      </rect>
